# build2docker

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  Dockerfile  Makefile  README.md  docker-compose.test.yml  setup.cfg
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support-question.md
.github/workflows/: docker.yml  release.yml  test.yml
build2docker/: _version.py
docs/: issue_template.md  pull_request_template.md
docs/source/: architecture.md  changelog.md  conf.py  config_files.rst  design.md  faq.rst  index.rst  install.rst  specification.rst  usage.rst
docs/source/configuration/: index.rst
docs/source/contributing/: buildpack.md  contentprovider.rst  contributing.md  index.rst  roadmap.md  tasks.md
docs/source/getting-started/: index.rst
docs/source/howto/: base_image.md  breaking_changes.md  deploy.rst  export_environment.rst  index.rst  jupyterhub_images.rst  languages.rst  user_interface.rst
tests/: conftest.py
tests/conda/: README.md
tests/julia/: README.md
tests/r/: README.md
tests/unit/: test_app.py  test_args.py  test_argumentvalidation.py  test_binder_dir.py  test_buildpack.py  test_cache_from.py  test_clone_depth.py  test_connect_url.py  test_docker.py  test_editable.py  test_env.py  test_env_yml.py  test_external_scripts.py  test_freeze.py  test_labels.py  test_memlimit.py  test_ports.py  test_preassemble.py  test_r.py  test_semver.py  test_subdir.py  test_users.py  test_utils.py  test_volumes.py
(+13 files in other folders)
