# used by our travis auto-deployment system
# needs changing if build2docker ever stops being
# a pure python module
[wheel]
universal = 1

[metadata]
license_file = LICENSE

[versioneer]
VCS = git
style = pep440
versionfile_source = build2docker/_version.py
versionfile_build = build2docker/_version.py
tag_prefix =
parentdir_prefix = build2docker-
